--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@600&family=Noto+Nastaliq+Urdu:wght@600&family=Nova+Oval&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>X FOUR</title>
+    <title>أبلة فاهيتا</title>
 </head>
 <body>
 
