--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <section class="about-us">
         <div class="left">
-            <img src="Photos/about.jpg" alt="">
+            <img src="photos/about.jpg" alt="">
         </div>
         <div class="right">
             <h1 id="about-us">معلومات عنا</h1>
